--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -725,4 +725,9 @@
     <string name="covicode_dialog_negative">Cancel</string>
     <string name="covicode_error">Invalid Covi-Code</string>
     <string name="submission_test_result_negative_warning">This screen cannot be used as a COVID certificate</string>
+    <string name="covidsafe_card_title">Vaccine certificate</string>
+    <string name="covidsafe_title">My vaccine certificate</string>
+    <string name="covidsafe_app_title">CovidSafeBE</string>
+    <string name="covidsafe_app_subtitle">Click here to start the CovidSafe app</string>
+    <string name="covidsafe_app_button">Start</string>
 </resources>
