--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -706,4 +706,7 @@
     <string name="covidsafe_app_title">CovidSafeBE</string>
     <string name="covidsafe_app_subtitle">Klicken Sie hier, um die CovidSafe-App zu starten</string>
     <string name="covidsafe_app_button">Start</string>
+    <string name="risk_card_button_test">Anfrage Covid-Test</string>
+    <string name="risk_card_button_test_link">https://www.meinegesundheit.belgien.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+
 </resources>
