--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -705,4 +705,7 @@
     <string name="covidsafe_app_title">CovidSafeBE</string>
     <string name="covidsafe_app_subtitle">Cliquez ici pour démarrer CovidSafe app</string>
     <string name="covidsafe_app_button">Démarrer</string>
+    <string name="risk_card_button_test">Demandez un test Covid</string>
+    <string name="risk_card_button_test_link">https://www.masante.belgique.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+
 </resources>
