--- a/Corona-Warn-App/src/main/res/values-nl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-nl/strings.xml
@@ -701,9 +701,12 @@
     <string name="covicode_error">Ongeldige Covi-Code</string>
     <string name="submission_test_result_negative_warning">Dit scherm kan niet als COVID-certificaat worden gebruikt</string>
 
-  <string name="covidsafe_card_title">Vaccin certificaat</string>
-  <string name="covidsafe_title">Mijn vaccinatiecertificaat</string>
-  <string name="covidsafe_app_title">CovidSafeBE</string>
-  <string name="covidsafe_app_subtitle">Klik hier om de CovidSafe-app te starten</string>
-  <string name="covidsafe_app_button">Begin</string>
+    <string name="covidsafe_card_title">Vaccin certificaat</string>
+    <string name="covidsafe_title">Mijn vaccinatiecertificaat</string>
+    <string name="covidsafe_app_title">CovidSafeBE</string>
+    <string name="covidsafe_app_subtitle">Klik hier om de CovidSafe-app te starten</string>
+    <string name="covidsafe_app_button">Begin</string>
+    <string name="risk_card_button_test">Covid test aanvragen</string>
+    <string name="risk_card_button_test_link">https://www.mijngezondheid.belgie.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+
 </resources>
