--- a/Corona-Warn-App/src/main/res/values-fr/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-fr/strings.xml
@@ -706,6 +706,6 @@
     <string name="covidsafe_app_subtitle">Cliquez ici pour démarrer CovidSafe app</string>
     <string name="covidsafe_app_button">Démarrer</string>
     <string name="risk_card_button_test">Demandez un test Covid</string>
-    <string name="risk_card_button_test_link">https://www.masante.belgique.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+    <string name="risk_card_button_test_link">https://sat.info-coronavirus.be/fr/coronalert</string>
 
 </resources>
