--- a/Corona-Warn-App/src/main/res/values-nl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-nl/strings.xml
@@ -707,6 +707,6 @@
     <string name="covidsafe_app_subtitle">Klik hier om de CovidSafe-app te starten</string>
     <string name="covidsafe_app_button">Begin</string>
     <string name="risk_card_button_test">Covid test aanvragen</string>
-    <string name="risk_card_button_test_link">https://www.mijngezondheid.belgie.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+    <string name="risk_card_button_test_link">https://sat.info-coronavirus.be/nl/coronalert</string>
 
 </resources>
