--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -731,5 +731,5 @@
     <string name="covidsafe_app_subtitle">Click here to start the CovidSafe app</string>
     <string name="covidsafe_app_button">Start</string>
     <string name="risk_card_button_test">Request a COVID test</string>
-    <string name="risk_card_button_test_link">https://www.myhealth.belgium.be/#/app/covid-19/prescriptions/request/corona-alert</string>
+    <string name="risk_card_button_test_link">https://sat.info-coronavirus.be/en/coronalert</string>
 </resources>
