--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -708,8 +708,8 @@
     <string name="submission_test_result_warning_others_title">Do you want to warn others?</string>
     <string name="submission_test_result_warning_others_positive">Yes</string>
     <string name="submission_test_result_warning_others_negative">No</string>
-    <string name="vaccination_at_least_1_dose">At least 1 dose</string>
-    <string name="vaccination_fully_vaccinated">Fully vaccinated</string>
+    <string name="vaccination_1_dose">1 Dose</string>
+    <string name="vaccination_2_dose">2 Doses</string>
     <string name="vaccination_title">Vaccination</string>
     <string name="covicode_card_title">I got tested</string>
     <string name="covicode_title">Use The Covi-Code</string>
@@ -732,4 +732,5 @@
     <string name="covidsafe_app_button">Start</string>
     <string name="risk_card_button_test">Request a COVID test</string>
     <string name="risk_card_button_test_link">https://sat.info-coronavirus.be/en/coronalert</string>
+    <string name="vaccination_3_dose">3 Doses</string>
 </resources>
